--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <button type="button" class="btn btn-outline-light btn-lg mt-4"><i class="fa-brands fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6">
-          <img src="images/iphone6.png" alt="iphone-mockup" class="iphone-img">
+          <img src="iphone6.png" alt="iphone-mockup" class="iphone-img">
         </div>
       </div>
 
@@ -90,7 +90,7 @@
   <section id="testimonials">
 
     <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile" class="dog-image">
+    <img src="dog-img.jpg" alt="dog-profile" class="dog-image">
     <em>Pebbles, New York</em>
 
     <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
@@ -100,10 +100,10 @@
   </section>
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <img src="techcrunch.png" alt="tc-logo">
+    <img src="tnw.png" alt="tnw-logo">
+    <img src="bizinsider.png" alt="biz-insider-logo">
+    <img src="mashable.png" alt="mashable-logo">
 
   </section>
 
