--- a/index.html
+++ b/index.html
@@ -53,13 +53,10 @@
           <button type="button" class="btn btn-outline-light btn-lg mt-4"><i class="fa-brands fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6">
-          <img src="iphone6.png" alt="iphone-mockup" class="iphone-img">
+          <img src="images/iphone6.png" alt="iphone-mockup" class="iphone-img">
         </div>
       </div>
-
     </div>
-
-
   </section>
 
   <section id="features">
@@ -89,54 +86,90 @@
 
   <section id="testimonials">
 
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="dog-img.jpg" alt="dog-profile" class="dog-image">
-    <em>Pebbles, New York</em>
-
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-    <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
-    <em>Beverly, Illinois</em> -->
-
+    <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <h2>" I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof. "</h2>
+          <img src="images/dog-img.jpg" alt="dog-profile" class="dog-image">
+          <em>Pebbles, New York</em>
+        </div>
+        <div class="carousel-item">
+          <h2 class="testimonial-text">" My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think. "</h2>
+          <img src="images/lady-img.jpg" alt="lady-profile" class="lady-image">
+          <em>Beverly, Illinois</em>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
   </section>
 
   <section id="press">
-    <img src="techcrunch.png" alt="tc-logo">
-    <img src="tnw.png" alt="tnw-logo">
-    <img src="bizinsider.png" alt="biz-insider-logo">
-    <img src="mashable.png" alt="mashable-logo">
+    <img class="trust-logos" src="images/techcrunch.png" alt="tc-logo">
+    <img class="trust-logos" src="images/tnw.png" alt="tnw-logo">
+    <img class="trust-logos" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="trust-logos" src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
   <section id="pricing">
-
     <h2>A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
+    <div class="row card-container">
+      <div class="col-lg-4 col-md-6">
+        <div class="card ">
+          <div class="card-header">
+            <h3>Chihuahua</h3>
+          </div>
+          <div class="card-body d-grid">
+            <h2 class="price">Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-outline-dark btn-lg  short">Sign Up</button>
+          </div>
+        </div>
+      </div>
 
-    <h3>Chihuahua</h3>
-    <h2>Free</h2>
-    <p>5 Matches Per Day</p>
-    <p>10 Messages Per Day</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
+      <div class="col-lg-4 col-md-6">
+        <div class="card ">
+          <div class="card-header">
+            <h3>Labrador</h3>
+          </div>
+          <div class="card-body d-grid">
+            <h2 class="price">$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-lg btn-dark short">Sign Up</button>
+          </div>
+        </div>
+      </div>
 
 
-    <h3>Labrador</h3>
-    <h2>$49 / mo</h2>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
-
-    <h3>Mastiff</h3>
-    <h2>$99 / mo</h2>
-    <p>Pirority Listing</p>
-    <p>Unlimited Matches</p>
-    <p>Unlimited Messages</p>
-    <p>Unlimited App Usage</p>
-    <button type="button">Sign Up</button>
-
+      <div class="col-lg-4 col-md-12">
+        <div class="card ">
+          <div class="card-header">
+            <h3>Mastiff</h3>
+          </div>
+          <div class="card-body d-grid">
+            <h2 >$99 / mo</h2>
+            <p>Pirority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button class="btn btn-lg  btn-dark" type="button" >Sign Up</button>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <section id="cta">
