--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
   </section>
 
   <section id="press">
-    <img class="trust-logos" src="techcrunch.png" alt="tc-logo">
+    <img class="trust-logos" src="TechCrunch.png" alt="tc-logo">
     <img class="trust-logos" src="tnw.png" alt="tnw-logo">
     <img class="trust-logos" src="bizinsider.png" alt="biz-insider-logo">
     <img class="trust-logos" src="mashable.png" alt="mashable-logo">
