--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </button>
           <button type="button" class="btn btn-outline-light btn-lg mt-4"><i class="fa-brands fa-google-play"></i> Download</button>
         </div>
-        <div class="col-lg-6">
+        <div class="col-lg-6 iphone-img-container">
           <img src="iphone6.png" alt="iphone-mockup" class="iphone-img">
         </div>
       </div>
@@ -89,7 +89,7 @@
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <h2>" I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof. "</h2>
+          <h2 class="testimonial-text">" I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof. "</h2>
           <img src="dog-img.jpg" alt="dog-profile" class="dog-image">
           <em>Pebbles, New York</em>
         </div>
@@ -99,6 +99,7 @@
           <em>Beverly, Illinois</em>
         </div>
       </div>
+
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
@@ -119,7 +120,7 @@
   </section>
 
   <section id="pricing">
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="testimonial-text">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
     <div class="row card-container">
