--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <button type="button" class="btn btn-outline-light btn-lg mt-4"><i class="fa-brands fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6 iphone-img-container">
-          <img src="iphone6.png" alt="iphone-mockup" class="iphone-img">
+          <img src="images/iphone6.png" alt="iphone-mockup" class="iphone-img">
         </div>
       </div>
     </div>
@@ -90,12 +90,12 @@
       <div class="carousel-inner">
         <div class="carousel-item active">
           <h2 class="testimonial-text">" I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof. "</h2>
-          <img src="dog-img.jpg" alt="dog-profile" class="dog-image">
+          <img src="images/dog-img.jpg" alt="dog-profile" class="dog-image">
           <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item">
           <h2 class="testimonial-text">" My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think. "</h2>
-          <img src="lady-img.jpg" alt="lady-profile" class="lady-image">
+          <img src="images/lady-img.jpg" alt="lady-profile" class="lady-image">
           <em>Beverly, Illinois</em>
         </div>
       </div>
@@ -112,10 +112,10 @@
   </section>
 
   <section id="press">
-    <img class="trust-logos" src="TechCrunch.png" alt="tc-logo">
-    <img class="trust-logos" src="tnw.png" alt="tnw-logo">
-    <img class="trust-logos" src="bizinsider.png" alt="biz-insider-logo">
-    <img class="trust-logos" src="mashable.png" alt="mashable-logo">
+    <img class="trust-logos" src="images/TechCrunch.png" alt="tc-logo">
+    <img class="trust-logos" src="images/tnw.png" alt="tnw-logo">
+    <img class="trust-logos" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="trust-logos" src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
@@ -175,15 +175,21 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-text">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="btn btn-dark btn-lg mt-5 me-3 cta-button">
+      <i class="fa-brands fa-apple"></i>
+      Download
+    </button>
+    <button type="button" class="btn btn-outline-light btn-lg mt-5 cta-button"><i class="fa-brands fa-google-play"></i> Download</button>
 
   </section>
 
   <footer id="footer">
-
-    <p>© Copyright TinDog</p>
+<i class="fa-brands fa-twitter me-4 fa-lg"></i>
+<i class="fa-brands fa-facebook-f  me-4 fa-lg"></i>
+<i class="fa-brands fa-instagram  me-4 fa-lg"></i>
+<i class="fa-solid fa-envelope fa-lg" ></i>
+    <p class="copyright">© Copyright TinDog</p>
 
   </footer>
 
